[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
ash = { version = "0.35.0", features = ["linked"] }
ash-window = "0.9.0"
glfw = { version = "0.43.0", features = ["vulkan"] }
lazy_static = "1.4.0"
vk-sys = "0.7.0"
